leaderboards data update and ui upgrade.
